created the NauticalMap object holding on all the vector containers. Because we need to check MPAs locations often I decided to store whether each pixel is part of an MPA in the pixel itself (the SeaTile object).

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies
     compile fileTree(dir: 'libs/mason', include: '*.jar')
     compile fileTree(dir: 'libs/geomason', include: '*.jar')
     testCompile "junit:junit:4.12"
+    testCompile "org.mockito:mockito-all:1.9.5"
 }
 
 
@@ -55,3 +56,5 @@ test {
     events "passed", "skipped", "failed"
   }
 }
+
+
