laid the groundworks for an OSMOSE-link. Osmose is a Java ecological model representing fish by schools moving here and there. It is not coded with other uses in mind (see for example the abuse of static methods to call in simulation instances rather than passing references along, or the parameter file parsing bundled with the constructors) so the code-link looks ugly and hackish but it's a start and it's worth testing out as we might like it after we modify it heavily.

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies
     //mason libraries. They aren't on maven so we have to lug their jars around
     compile fileTree(dir: 'libs/mason', include: '*.jar')
     compile fileTree(dir: 'libs/geomason', include: '*.jar')
+    //a jury-rigged version of OSMOSE, hopefully linkable with this simulation
+    compile fileTree(dir: 'libs/osmose', include: '*.jar')
+
     //guava. Useful for PreConditions and sometimes specialized collections
     compile "com.google.guava:guava:18.0"
     //shiny new genetic algorithm library. So far very unimpressive. Might switch back to watchmaker
