Created a utility method to find absolute paths from JARs. Also created yearly data-set for fish-state

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ task wrapper(type: Wrapper) {
 
 
 task fatJar(type: FatCapsule) {
+    archiveName = "oxfish_executable.jar"
     applicationClass 'Main'
 }
 
