--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,10 @@ dependencies
     compile "org.metawidget.modules:metawidget-all:4.1"
     compile "commons-beanutils:commons-beanutils:1.8.3"
 
+    //logger:
+    compile "com.esotericsoftware:minlog:1.3.0"
+
+
     //testing:
     testCompile "junit:junit:4.12"
     testCompile "org.mockito:mockito-all:1.9.5"
