--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,11 @@ dependencies
     //logger:
     compile "com.esotericsoftware:minlog:1.3.0"
 
+    //jung social network:
+    compile "net.sf.jung:jung-api:2.0.1"
+    compile 'net.sf.jung:jung-graph-impl:2.0.1'
+    compile 'net.sf.jung:jung-algorithms:2.0.1'
+
 
     //testing:
     testCompile "junit:junit:4.12"
