Created a simple GUILessMain to read a YAML input file, turn it into a scenario and run it for a couple of years. It worked pretty well, all in all. I might need to add a final piece of infrastructure where we can have a secondary file telling how many steps to run, what parameters to modify each run and so on. Not sure if that ought to be something YAML based or code based either. Maybe it can wait till we have a lot of simulations to run over the cloud

--- a/build.gradle
+++ b/build.gradle
@@ -75,15 +75,26 @@ test{
     maxParallelForks = Math.max(Runtime.runtime.availableProcessors() -1,1)
 }
 
+//this just mentions what the gradle version for the "wrapper" gradlew ought to be
 task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
 }
 
 
+//this task creates a single executable jar ("fat" because it contains all its requirements); this is mostly what gets
+//distributed
 task fatJar(type: FatCapsule) {
     archiveName = "oxfish_executable.jar"
     applicationClass 'Main'
 }
+
+//this task can be called as ./gradlew buildSampleFiles and simply rebuilds the "YAML Samples" folder
+task buildSampleFiles(type: JavaExec){
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'uk.ac.ox.oxfish.experiments.BuildSampleInputs'
+}
+
+
 
 
 test {
