Pretty deep changes, adding fuel and its consumption to the mix. Because fuel is consumed while moving and while fishing, because it interacts both with trip records and engine efficiency a lot of classes had to be tweaked to get it to work just right. It does now in all the tests.

--- a/inputs/YAML Samples/scenario/OSMOSE Prototype.yaml
+++ b/inputs/YAML Samples/scenario/OSMOSE Prototype.yaml
@@ -7,13 +7,16 @@ OSMOSE Prototype:
     Per Trip Iterative:
       stepSize: '5.0'
       tripsPerDecision: '1.0'
+  engineWeight: normal 100.0 10.0
   fishers: 50
   fishingEfficiency: '0.01'
   fishingStrategy:
     Until Full With Day Limit:
       daysAtSea: '10.0'
+  fuelTankSize: '10000.0'
   gridSizeInKm: 5.0
   holdSize: '100.0'
+  literPerKilometer: '1.0'
   networkBuilder:
     Equal Out Degree:
       degree: 2
