Basically there were two issues with MPA drawings: (1) the prototype vector field holding MPAs needed to be initialized even as empty (2) needed to modify the coordinates clicked when zooming out as the inner display would draw a weird grey border nobody wants

--- a/inputs/YAML Samples/scenario/Genetic Algorithm Prototype.yaml
+++ b/inputs/YAML Samples/scenario/Genetic Algorithm Prototype.yaml
@@ -13,6 +13,6 @@ Genetic Algorithm Prototype:
   height: 50
   holdSize: '100.0'
   ports: 1
-  regulation: Anarchy
+  regulation: MPA Only
   speedInKmh: '5.0'
   width: 50
