--- a/inputs/YAML Samples/scenario/Genetic Algorithm Prototype.yaml
+++ b/inputs/YAML Samples/scenario/Genetic Algorithm Prototype.yaml
@@ -5,7 +5,7 @@ Genetic Algorithm Prototype:
       probabilityToLeavePort: '1.0'
   depthSmoothing: 1000000
   fishers: 300
-  fishingEfficiency: '0.01'
+  catchabilityMean: '0.01'
   fishingStrategy:
     Until Full With Day Limit:
       daysAtSea: '10.0'
