--- a/inputs/YAML Samples/scenario/Genetic Algorithm Prototype.yaml
+++ b/inputs/YAML Samples/scenario/Genetic Algorithm Prototype.yaml
@@ -1,8 +1,8 @@
 Genetic Algorithm Prototype:
   coastalRoughness: 4
   departingStrategy:
-    Fixed Probability:
-      probabilityToLeavePort: '1.0'
+    Fixed Rest:
+      hoursBetweenEachDeparture: '12.0'
   depthSmoothing: 1000000
   fishers: 100
   fishingEfficiency: '0.01'
