--- a/inputs/temp.yaml
+++ b/inputs/temp.yaml
@@ -1,10 +1,8 @@
 Prototype:
   biologyInitializer:
-    Diffusing Logistic:
-      carryingCapacity: '5000.0'
-      differentialPercentageToMove: '5.0E-4'
-      percentageLimitOnDailyMovement: '0.01'
-      steepness: uniform 0.6 0.8
+    From Left To Right Fixed:
+      biologySmoothingIndex: '1000000.0'
+      maximumBiomass: '1000.0'
   catchabilityDeviation: '0.0'
   catchabilityMean: '0.01'
   coastalRoughness: 4
@@ -15,7 +13,7 @@ Prototype:
   destinationStrategy:
     Imitator-Explorator:
       explorationProbability: '0.8'
-      ignoreEdgeDirection: true
+      ignoreEdgeDirection: false
       stepSize: '5.0'
   engineWeight: normal 100.0 10.0
   fishers: 100
@@ -23,14 +21,18 @@ Prototype:
     Until Full With Day Limit:
       daysAtSea: '10.0'
   fuelTankSize: '100000.0'
-  gasPricePerLiter: '0.01'
-  gridCellSizeInKm: 10.0
+  gasPricePerLiter: '0'
+  gridCellSizeInKm: 1.0
   height: 50
   holdSize: '100.0'
   literPerKilometer: '10.0'
   market:
-    Fixed Price Market:
-      marketPrice: '10.0'
+    Congested Market:
+      acceptableBiomassThreshold: '5000.0'
+      dailyConsumption: '9000.0'
+      demandSlope: '0.00003'
+      maxPrice: '10.0'
+      consumptionPeriod: '60'
   networkBuilder:
     Equal Out Degree:
       degree: 2
