Created the weather structure and two placeholder strategies to deal with them. They test fine. Now I need to integrate them with the scenario and the fisher

--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -14,8 +14,13 @@ Per Trip Iterative:
   stepSize: '5.0'
 -------
 Imitator-Explorator:
-  explorationProbability: '0.8'
   ignoreEdgeDirection: true
+  probability:
+    Adaptive Probability:
+      explorationProbability: '0.8'
+      explorationProbabilityMinimum: '0.01'
+      imitationProbability: '1.0'
+      incrementMultiplier: '0.02'
   stepSize: '5.0'
 -------
 PSO:
