--- a/inputs/YAML Samples/components/Regulation.yaml
+++ b/inputs/YAML Samples/components/Regulation.yaml
@@ -7,8 +7,11 @@ Fishing Season:
 MPA Only
 -------
 Mono-TAC:
-  quota: '1000.0'
+  quota: '500000.0'
+-------
+Mono-IQ:
+  individualQuota: '5000.0'
 -------
 Mono-ITQ:
-  individualQuota: '1000.0'
+  individualQuota: '5000.0'
 -------
