Worked and delivered habitat demo. Created policy buttons to have more policies ready and available and pluggable according to the demo. Created a new rocky initializers, not particularly pretty but functional

--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,7 @@ task wrapper(type: Wrapper) {
 task fatJar(type: FatCapsule) {
     archiveName = "oxfish_executable.jar"
     applicationClass 'Main'
+ //   applicationClass 'uk.ac.ox.oxfish.experiments.dedicated.habitat.HabitatDeployment'
 
     capsuleManifest {
         minJavaVersion = '1.8.0'
