--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ dependencies
 
 //this makes tests multi-threaded when called from gradle. Useful!
 test{
-    maxParallelForks = 3
+    maxParallelForks = Math.min(Runtime.runtime.availableProcessors(),3)
 }
 
 //this just mentions what the gradle version for the "wrapper" gradlew ought to be
