Wanted to work on the dashboard but figured that what we really need first is the ability to merge yaml files. I hate the yaml library and hack I built to deal with it but amazingly it merges yaml files very well: all you need to do is to read the modifications before the base. Ghoulish, really but it works and is tested

--- a/inputs/YAML Samples/components/HabitatInitializer.yaml
+++ b/inputs/YAML Samples/components/HabitatInitializer.yaml
@@ -1,7 +1,12 @@
 All Sand
 -------
 Rocky Rectangles:
-  numberOfRectangles: '5.0'
-  rockyHeight: uniform 5.0 10.0
-  rockyWidth: uniform 5.0 10.0
+  numberOfRectangles: '1.0'
+  rockyHeight: uniform 25.0 30.0
+  rockyWidth: uniform 20.0 25.0
+-------
+Rocky Pyramids:
+  maxSpread: 6
+  numberOfPeaks: 10
+  smoothingValue: '0.7'
 -------
