worked hard on automatic the creating of dashboard. Need to work on the html part now to auto-list all the dashboard pdf files I created

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .directory
-runs/
+runs/*
+!runs/dashboards
+runs/dashboards/*
+!runs/dashboards/dashboard.R
+
 oxfish.iml
 ### NetBeans template
 nbproject/private/
