Modified osmose further to unite the two scenarios. Next commit I'll probably kill OsmosePrototype off

--- a/inputs/YAML Samples/scenario/OSMOSE Prototype.yaml
+++ b/inputs/YAML Samples/scenario/OSMOSE Prototype.yaml
@@ -1,5 +1,5 @@
 OSMOSE Prototype:
-  buninLength: 100
+  initializationInYears: 100
   departingStrategy:
     Fixed Probability:
       probabilityToLeavePort: '1.0'
