--- a/runs/optimization/base.yaml
+++ b/runs/optimization/base.yaml
@@ -1,10 +1,11 @@
 Prototype:
   biologyInitializer:
-    Diffusing Logistic:
-      carryingCapacity: '5000.0'
+    Well-Mixed:
+      capacityRatioSecondToFirst: '0.2'
       differentialPercentageToMove: '0.001'
+      firstSpeciesCapacity: '5000.0'
       percentageLimitOnDailyMovement: '0.01'
-      steepness: uniform 0.6 0.8
+      steepness: 0.7
   departingStrategy:
     Fixed Rest:
       hoursBetweenEachDeparture: '12.0'
@@ -19,7 +20,7 @@ Prototype:
           incrementMultiplier: '0.02'
       stepSize: uniform 1.0 10.0
   engineWeight: normal 100.0 10.0
-  fishers: 100
+  fishers: 300
   fishingStrategy:
     Until Full With Day Limit:
       daysAtSea: '5.0'
@@ -38,11 +39,11 @@ Prototype:
   mapInitializer:
     Simple Map:
       cellSizeInKilometers: '10.0'
-      coastalRoughness: '4.0'
+      coastalRoughness: '0'
       depthSmoothing: '1000000.0'
       height: '50.0'
       width: '50.0'
-  mapMakerDedicatedRandomSeed: null
+  mapMakerDedicatedRandomSeed: 0
   market:
     Fixed Price Market:
       marketPrice: '10.0'
@@ -52,11 +53,8 @@ Prototype:
   ports: 1
   regulation: MPA Only
   speedInKmh: '5.0'
-  startingMPAs:
-  - height: 60
-    topLeftX: 0
-    topLeftY: 0
-    width: 60
+  startingMPAs: [
+    ]
   usePredictors: false
   weatherInitializer:
     Constant Weather:
