--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -14,6 +14,8 @@ Per Trip Iterative:
   stepSize: '5.0'
 -------
 Imitator-Explorator:
+  alwaysCopyBest: false
+  dynamicFriendshipNetwork: false
   ignoreEdgeDirection: true
   probability:
     Adaptive Probability:
