--- a/runs/optimization/spearmint/config.json
+++ b/runs/optimization/spearmint/config.json
@@ -1,35 +1,65 @@
 {
   "language": "PYTHON",
-  "main-file": "unfriend.py",
-  "experiment-name": "unfriend",
+  "main-file": "kitchensink.py",
+  "experiment-name": "kitchensink",
   "likelihood": "GAUSSIAN",
   "resources": {
     "my-machine": {
       "scheduler": "local",
       "max-concurrent": 3,
-      "max-finished-jobs": 200
+      "max-finished-jobs": 600
     }
   },
   "variables": {
-    "unfriend": {
-      "type": "FLOAT",
-      "size": 1,
-      "min": 0,
-      "max": 2
-    },
-    "degree": {
+    "length": {
       "type": "INT",
       "size": 1,
       "min": 1,
-      "max": 20
+      "max": 366
     },
-    "best": {
+    "first" : {
+      "type" : "FLOAT",
+      "size" : 1,
+      "min"  : 1,
+      "max"  : 5000
+    },
+    "second" : {
+      "type" : "FLOAT",
+      "size" : 1,
+      "min"  : 1,
+      "max"  : 5000
+    },
+    "tradeable": {
       "type": "enum",
       "size": 1,
       "options": [
         "true",
         "false"
       ]
+    },
+    "height" : {
+      "type" : "INT",
+      "size" : 1,
+      "min"  : 1,
+      "max"  : 40
+    },
+    "width" : {
+      "type" : "INT",
+      "size" : 1,
+      "min"  : 1,
+      "max"  : 40
+    },
+    "x" : {
+      "type" : "INT",
+      "size" : 1,
+      "min"  : 0,
+      "max"  : 49
+    },
+    "y" : {
+      "type" : "INT",
+      "size" : 1,
+      "min"  : 0,
+      "max"  : 49
     }
   }
 }
