Allowed the gui main to open a yaml file and run it after editing. Main is getting quite complicated and at some later date I might want to extract the gui part from the rest but for it is all good

--- a/runs/optimization/spearmint/config.json
+++ b/runs/optimization/spearmint/config.json
@@ -1,7 +1,7 @@
 {
   "language": "PYTHON",
   "main-file": "kitchensink.py",
-  "experiment-name": "kitchensink",
+  "experiment-name": "kitchensink_opt",
   "likelihood": "GAUSSIAN",
   "resources": {
     "my-machine": {
@@ -40,13 +40,13 @@
     "height" : {
       "type" : "INT",
       "size" : 1,
-      "min"  : 1,
+      "min"  : 0,
       "max"  : 40
     },
     "width" : {
       "type" : "INT",
       "size" : 1,
-      "min"  : 1,
+      "min"  : 0,
       "max"  : 40
     },
     "x" : {
