One small bit of testing integrated testing box. Also created a multitest bash which runs the tests 100 times. Recently I've been thinking about tests that fail only a small percentage of the time. This should be expected in a stochastic environment but I feel they need to be tracked to make sure this percentage isn't growing/shrinking unexpectedly. And perhaps to judge if the percentage of failures isn't as small as it should be!

--- a/build.gradle
+++ b/build.gradle
@@ -150,6 +150,29 @@ task dashboard(type: Exec, dependsOn: prepareDashBoard ) {
     args = [ "dashboard.sh",  date, website_folder ]
 }
 
+
+task testCSV(){
+    def output = file("build/reports/multitest/" + date + ".csv")
+    doLast {
+        file("build/reports").mkdirs()
+        output.text = '"Project","Test","Time","Result","Duration"\r\n'
+        allprojects.each { project2 ->
+            logger.info("Processing project ${project2.name}")
+            def resultFiles = project2.fileTree("build") { include '**/TEST-*.xml' }
+            resultFiles.each { file ->
+                logger.info("Processing report ${file}")
+                def testsuite = new XmlSlurper().parse(file)
+                testsuite.testcase.each { testcase ->
+                    def result = "pass"
+                    if (!testcase.failure.isEmpty()) { result = "fail" }
+                    else if (!testcase.skipped.isEmpty()) { result = "skip" }
+                    output << "\"${project2.name}\",\"${testcase.@classname}.${testcase.@name}\",\"${testcase.@timestamp}\",\"${result}\",\"${testcase.@time}\"\r\n"
+                }
+            }
+        }
+    }
+}
+
 test {
   useJUnit()
   testLogging {
