--- a/runs/optimization/spearmint/config.json
+++ b/runs/optimization/spearmint/config.json
@@ -1,40 +1,65 @@
 {
-    "language"        : "PYTHON",
-    "main-file"       : "mpa_scored.py",
-    "experiment-name" : "mpa_scored",
-    "likelihood"      : "GAUSSIAN",
-    "resources" : {
-        "my-machine" : {
-            "scheduler"         : "local",
-            "max-concurrent"    : 3,
-            "max-finished-jobs" : 200
-        }
-    },
-    "variables" : {
-        "height" : {
-            "type" : "INT",
-            "size" : 1,
-            "min"  : 1,
-            "max"  : 50
-        },
-        "width" : {
-            "type" : "INT",
-            "size" : 1,
-            "min"  : 1,
-            "max"  : 50
-        },
-        "x" : {
-            "type" : "INT",
-            "size" : 1,
-            "min"  : 0,
-            "max"  : 49
-        },
-        "y" : {
-            "type" : "INT",
-            "size" : 1,
-            "min"  : 0,
-            "max"  : 49
-        }
+  "language": "PYTHON",
+  "main-file": "kitchensink_3.py",
+  "experiment-name": "kitchensink_3",
+  "likelihood": "GAUSSIAN",
+  "resources": {
+    "my-machine": {
+      "scheduler": "local",
+      "max-concurrent": 3,
+      "max-finished-jobs": 600
     }
+  },
+  "variables": {
+    "length": {
+      "type": "INT",
+      "size": 1,
+      "min": 1,
+      "max": 366
+    },
+    "first" : {
+      "type" : "FLOAT",
+      "size" : 1,
+      "min"  : 1,
+      "max"  : 5000
+    },
+    "second" : {
+      "type" : "FLOAT",
+      "size" : 1,
+      "min"  : 1,
+      "max"  : 5000
+    },
+    "tradeable": {
+      "type": "enum",
+      "size": 1,
+      "options": [
+        "true",
+        "false"
+      ]
+    },
+    "height" : {
+      "type" : "INT",
+      "size" : 1,
+      "min"  : 0,
+      "max"  : 50
+    },
+    "width" : {
+      "type" : "INT",
+      "size" : 1,
+      "min"  : 0,
+      "max"  : 50
+    },
+    "x" : {
+      "type" : "INT",
+      "size" : 1,
+      "min"  : 0,
+      "max"  : 49
+    },
+    "y" : {
+      "type" : "INT",
+      "size" : 1,
+      "min"  : 0,
+      "max"  : 49
+    }
+  }
 }
-
