--- a/runs/optimization/spearmint/config.json
+++ b/runs/optimization/spearmint/config.json
@@ -1,51 +1,40 @@
 {
-  "language": "PYTHON",
-  "main-file": "congested_departure.py",
-  "experiment-name": "congested_departure",
-  "likelihood": "GAUSSIAN",
-  "resources": {
-    "my-machine": {
-      "scheduler": "local",
-      "max-concurrent": 3,
-      "max-finished-jobs": 300
+    "language"        : "PYTHON",
+    "main-file"       : "mpa_mixed.py",
+    "experiment-name" : "mixed_mpa",
+    "likelihood"      : "GAUSSIAN",
+    "resources" : {
+        "my-machine" : {
+            "scheduler"         : "local",
+            "max-concurrent"    : 3,
+            "max-finished-jobs" : 400
+        }
+    },
+    "variables" : {
+        "height" : {
+            "type" : "INT",
+            "size" : 1,
+            "min"  : 1,
+            "max"  : 50
+        },
+        "width" : {
+            "type" : "INT",
+            "size" : 1,
+            "min"  : 1,
+            "max"  : 50
+        },
+        "x" : {
+            "type" : "INT",
+            "size" : 1,
+            "min"  : 0,
+            "max"  : 49
+        },
+        "y" : {
+            "type" : "INT",
+            "size" : 1,
+            "min"  : 0,
+            "max"  : 49
+        }
     }
-  },
-  "variables": {
-    "intercept" : {
-      "type" : "FLOAT",
-      "size" : 1,
-      "min"  : 1,
-      "max"  : 60
-    },
-    "slope" : {
-      "type" : "FLOAT",
-      "size" : 1,
-      "min"  : 0,
-      "max"  : 0.1
-    },
-    "average" : {
-      "type" : "INT",
-      "size" : 1,
-      "min"  : 10,
-      "max"  : 60
-    },
-    "exploration" : {
-      "type" : "FLOAT",
-      "size" : 1,
-      "min"  : 0,
-      "max"  : 0.3
-    },
-    "gas_price":{
-      "type" : "FLOAT",
-      "size" : 1,
-      "min"  : 0.0001,
-      "max"  : 3
-    },
-     "catchability":{
-      "type" : "FLOAT",
-      "size" : 1,
-      "min"  : 0.0001,
-      "max"  : 0.01
-    }
-  }
 }
+
