Created a new demo about two sets of agents with different technology, hold size and fuel capacity

--- a/inputs/YAML Samples/components/Regulation.yaml
+++ b/inputs/YAML Samples/components/Regulation.yaml
@@ -30,7 +30,7 @@ Multi-TAC:
   firstSpeciesQuota: '500000.0'
   otherSpeciesQuota: '500000.0'
 -------
-Multi-TAC:
+Multi-TAC by List:
   yearlyQuotaMaps: 0:500000
 -------
 Kitchen Sink:
