cleaned up meristics test (that should be fully done). Refactored a bit the Logistic/Retention abundance filter and created a simple fixed proportion filter

--- a/build.gradle
+++ b/build.gradle
@@ -181,3 +181,14 @@ test {
 }
 
 
+idea{
+    project {
+        languageLevel = '1.8'
+    }
+    module {
+        downloadJavadoc = true // defaults to false
+        downloadSources = true
+    }
+}
+
+
