--- a/runs/optimization/spearmint/config.json
+++ b/runs/optimization/spearmint/config.json
@@ -1,40 +1,26 @@
 {
     "language"        : "PYTHON",
-    "main-file"       : "mpa_mixed.py",
-    "experiment-name" : "mixed_mpa",
+    "main_file"       : "selectivity.py",
+    "experiment-name" : "selectivity_100",
     "likelihood"      : "GAUSSIAN",
+    "acquisition"     : "PES",
     "resources" : {
         "my-machine" : {
             "scheduler"         : "local",
-            "max-concurrent"    : 3,
-            "max-finished-jobs" : 400
+            "max_concurrent"    : 3,
+            "max_finished-jobs" : 100
         }
     },
     "variables" : {
-        "height" : {
-            "type" : "INT",
-            "size" : 1,
-            "min"  : 1,
-            "max"  : 50
-        },
-        "width" : {
-            "type" : "INT",
-            "size" : 1,
-            "min"  : 1,
-            "max"  : 50
-        },
-        "x" : {
-            "type" : "INT",
-            "size" : 1,
-            "min"  : 0,
-            "max"  : 49
-        },
-        "y" : {
-            "type" : "INT",
-            "size" : 1,
-            "min"  : 0,
-            "max"  : 49
+        "selectivity" : {
+           "type" : "FLOAT",
+      	   "size" : 1,
+           "min"  : 0,
+           "max"  : 48
         }
+    },
+    "tasks" : {
+        "f"  : { "type" : "objective"  }
     }
 }
 
